--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
-{}
+{
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 115
+}
+    
