--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "braille-dots",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://renanfpina.github.io/braille-dots",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.32.0"
+    "eslint": "^8.32.0",
+    "gh-pages": "^5.0.0"
   }
 }
